cabal-version:      3.4
name:               org-to-linked-md
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Jeffrey Benjamin Brown
maintainer:         jeffbrown.the@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable org-to-linked-md
    import:           warnings
    main-is:          Main.hs
    other-modules:
      Analyze,
      Analyze.OneLine,
      GetPaths,
      Test,
      Tests.Analyze,
      Tests.Analyze.OneLine,
      Types,
      Util,
    -- other-extensions:
    build-depends:
      HUnit,
      base ^>=4.18.2.1,
      directory,
      filepath,
      regex-compat,
      regex-tdfa,
      text,
    hs-source-dirs:   app
    default-language: GHC2021
