cabal-version:      3.4
name:               org-roam-to-org-git
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Jeffrey Benjamin Brown
maintainer:         jeffbrown.the@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable org-roam-to-org-git
    import:           warnings
    main-is:          Main.hs
    other-modules:
      Anchor,
      BuildIndex,
      Config,
      GPT,
      GetPaths,
      Parse,
      Rewrite,
      Test,
      Test.Anchor,
      Test.BuildIndex,
      Test.Parse,
      Test.Rewrite,
      Types,
      Util,
    -- other-extensions:
    build-depends:
      HUnit,
      base ^>=4.18.2.1,
      containers,
      directory,
      filepath,
      megaparsec,
      regex-compat,
      -- regex-pcre, # Cabal doesn't like this.
      regex-tdfa,
      text,
    hs-source-dirs:   app
    default-language: GHC2021
